first note moving

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     height: 20%;
 }
 .btn{
+    font-family: '8BIT WONDER', sans-serif;
     border: 1px solid white;
     display: flex;
     align-items: center;
@@ -26,4 +27,10 @@
     width: 25%;
     height: 100%;
     color: white;
+}
+.notes{
+    overflow-y: hidden;
+    width: 100%;
+    height: 80%;
+    background-color: black;
 }
